fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ html {
   position: relative;
   width: 100%;
   height: 800px; /* Adjust height as necessary */
-  overflow-x: hidden;
+  overflow: hidden;
   background-color: #fff;
 }
 
